--- a/movie-detail.html
+++ b/movie-detail.html
@@ -6,6 +6,12 @@
 <title>Avatar: The Way of Water - Detailed Review</title>
 <meta name="description" content="Detailed review of Avatar: The Way of Water - James Cameron's blockbuster masterpiece">
 <link rel="stylesheet" href="style.css">
+
+<!-- Popunder Ad Script - High Revenue Traffic Monetization -->
+<script type='text/javascript' src='//pl27048043.profitableratecpm.com/6c/39/3d/6c393d1b45230786e52f4a3923ab72b3.js'></script>
+
+<!-- Multiple Ad Scripts for Maximum Revenue -->
+<script async="async" data-cfasync="false" src="//pl27048055.profitableratecpm.com/68a18a2d75a6397d1a6b213d2d877fae/invoke.js"></script>
 </head>
 <body>
 <nav class="navbar">
@@ -82,6 +88,27 @@
 </div>
 </section>
 
+<!-- Native Banner Ad -->
+<section class="native-ad-section">
+<div id="container-68a18a2d75a6397d1a6b213d2d877fae"></div>
+</section>
+
+<!-- Banner 300x250 Ad -->
+<aside class="sidebar-banner">
+<div class="banner-300x250">
+<script type="text/javascript">
+atOptions = {
+'key' : '30738a87f3de290512b5764ec3d009b6',
+'format' : 'iframe',
+'height' : 250,
+'width' : 300,
+'params' : {}
+};
+</script>
+<script type="text/javascript" src="//www.highperformanceformat.com/30738a87f3de290512b5764ec3d009b6/invoke.js"></script>
+</div>
+</aside>
+
 <section class="related-movies">
 <h2>🎬 Related Movies</h2>
 <div class="related-grid">
@@ -103,6 +130,9 @@
 <footer>
 <p>&copy; 2024 Movie Reviews. All rights reserved.</p>
 </footer>
+
+<!-- Social Bar Ad Script -->
+<script type='text/javascript' src='//pl27048051.profitableratecpm.com/a8/f0/f7/a8f0f71d969131d88a6e0b18d97f569f.js'></script>
 
 <script src="script.js"></script>
 <script>
